[package]
name = "pockets_for_me_api"
version = "0.1.0"
authors = ["Tom Milligan <code@tommilligan.net>"]

[lib]
name = "pockets_for_me_api"
path = "src/pockets_for_me_api/lib.rs"

[[bin]]
name = "server"
test = false
doc = false

[dependencies]
elastic = "0.20.2"
elastic_derive = "0.20.2"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.4"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
uuid = "0.5.1"
log = "0.3.8"
base64 = "0.7.0"

[dev-dependencies]
stainless = "0.1.12"
